--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,5 +12,5 @@
   "display": "fullscreen",
   "theme_color": "#000000",
   "background_color": "#000000",
-  "orientation": "portrait"
+  "orientation": "any"
 }
